k8s/hiarc/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hiarc
  namespace: hiarc
spec:
  selector:
    app: hiarc
  type: LoadBalancer
  ports:
   -  protocol: TCP
      port: 80
      targetPort: 80
