k8s/hiarc/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hiarc
  namespace: hiarc
spec:
  backend:
    serviceName: hiarc
    servicePort: 80
